Minor changes in index.html and css/styles.css

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 </head>
 <body>
 
-    <h1> h1 </h1>
-    
-    <p>nothing to see here yet.</p>
+    <header>
+        <h1> h1 </h1>    
+        <p>nothing to see here yet.</p>
+    </header>
 
     <section id="greenfox">
+        <h1>Green Fox related materials</h1>
         <ul>
             <li>
-                <a href="myFirstWebsite/index.html"> Green Fox week 1-2:  My First Website</a>
+                Green Fox week 1-2:  <a href="myFirstWebsite/index.html">My First Website</a>
             </li>
         </ul>
     </section>
